<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ExpressHelper</string>
    <string name="title_section_1">All</string>
    <string name="title_section_2">Pending</string>
    <string name="title_section_3">Delivered</string>

	<string name="action_manual_refresh">Refresh</string>
	<string name="toast_pull_to_refresh_tips">You can also refresh by pulling down the lists.</string>
	<string name="action_add">Add express</string>

    <string-array name="title_sections">
        <item>@string/title_section_1</item>
        <item>@string/title_section_2</item>
        <item>@string/title_section_3</item>
    </string-array>

    <string name="dialog_delete_title">Delete?</string>
    <string name="dialog_delete_msg">This operation can\'t be reversed.</string>
    <string name="details_has_copied">Detail\'s been copied to your clipboard.</string>
    <string name="title_add_express">Add Shipment</string>
    <string name="hint_et_name">Title (Optional)</string>
    <string name="hint_et_company">Carrier</string>
    <string name="hint_et_number">Tracking Number</string>
    <string name="toast_company_name_empty">Please select a carrier.</string>
    <string name="toast_number_empty">Please enter your tracking number.</string>
    <string name="toast_company_not_exist">Carrier doesn\'t exist or isn\'t unsupported.</string>
    <string name="toast_network_error">Network error! Please check your internet connection and try again.</string>
    <string name="toast_client_error">Client error! Please contact the author.</string>
    <string name="toast_unknown_error">Unknown error!</string>
    <string name="toast_add_package_failed">Failed to add the package.</string>
    <string name="toast_has_been_exist">The package has been exist in your list.</string>
    <string name="hint_company_name_empty">Select a carrier....</string>
    <string name="checkbox_force_add">Ignore error while adding</string>
    <string name="title_express_details">Details</string>
    <string name="item_status">Status</string>
    <string name="item_companyname">Carrier</string>
    <string name="item_mailno">Tracking Number</string>
    <string name="item_errorcode">Error Code</string>
    <string name="item_errormessage">Error Message</string>
    <string name="action_done">Done</string>
    <string name="action_edit">Edit</string>
    <string name="action_copy">Copy package information</string>
    <string name="action_share">Share</string>
    <string name="string_copy_format">My package: %1$s. Mail number: %2$s. Carrier: %3$s. </string>
    <string name="string_share_format">The status: %1$s. The latest information: %2$s.</string>
    <string name="action_should_push">Push message</string>

    <string-array name="status">
        <item>Failed</item>
        <item>Normal</item>
        <item>On the way</item>
        <item>Delivered</item>
        <item>Returned</item>
        <item>Other problem</item>
    </string-array>
    <string-array name="errCode">
        <item>No error</item>
        <item>No data</item>
        <item>API code error</item>
        <item>Server error</item>
        <item>Internal error</item>
        <item>Command error</item>
        <item>Wrong number</item>
        <item>Company problem</item>
        <item>null</item>
        <item>null</item>
        <item>Unknow error</item>
        <item>null</item>
        <item>null</item>
        <item>null</item>
        <item>null</item>
        <item>null</item>
        <item>null</item>
        <item>null</item>
        <item>null</item>
        <item>null</item>
        <item>API error</item>
        <item>API blocked</item>
        <item>API used up</item>
    </string-array>
    <string-array name="errCode_toast">
        <item>No error</item>
        <item>No data</item>
        <item>API code error</item>
        <item>Server error</item>
        <item>Internal error</item>
        <item>Command error</item>
        <item>The mail number is wrong.</item>
        <item>The company is not exist or supported.</item>
        <item>Unknown error</item>
        <item>Unknown error</item>
        <item>Unknown error</item>
        <item>Unknown error</item>
        <item>Unknown error</item>
        <item>Unknown error</item>
        <item>Unknown error</item>
        <item>Unknown error</item>
        <item>Unknown error</item>
        <item>Unknown error</item>
        <item>Unknown error</item>
        <item>Unknown error</item>
        <item>API error</item>
        <item>This API Token has been blocked.</item>
        <item>The daily times of this API Token have been used up.</item>
    </string-array>

    <string name="title_settings">Settings</string>
    <string name="category_about">About</string>
    <string name="item_application">ExpressHelper by Paper Airplane</string>
    <string name="item_open_source_license">Open-source License</string>
    <string name="item_api_title">Express Information API Provider</string>
    <string name="item_api_desc">AiChaKuaiDi</string>
    <string name="api_provider_home">"http://www.ickd.cn"</string>
    <string name="item_donate">Donate</string>
    <string name="donate_content">"If this application helps you, and you\'re willing to support us, you may donate to us via Alipay.\nMake a transaction to our Alipay account: 316643843\@qq.com, or simply scan the QR Code above."</string>
    <string name="item_weibo">Sina Weibo</string>
    <string name="item_weibo_author">\@某烧饼</string>
    <string name="item_weibo_author_url">"http://weibo.com/fython"</string>
    <string name="item_github">Github Repo</string>
    <string name="item_github_url">"https://github.com/PaperAirplane-Dev-Team/ExpressHelper"</string>
    <string name="category_ui">UI</string>
    <string name="toast_you_need_restart">Changes will apply after restarting the application.</string>
    <string name="category_api">API</string>
    <string name="item_token_choose">Select API Token</string>

    <string-array name="item_token_list">
        <item>Random (Default)</item>
        <item>XiFang\'s (5000 times per day, thx to Weibo user \@稀饭_Fighting)</item>
        <item>SkinMe\'s (5000 times per day, thx to Weibo user \@啾咕咕www)</item>
        <item>Alternative (2000 times per day)</item>
        <item>Custom (recommended for frequent use)</item>
    </string-array>
    <string-array name="item_token_list_values">
        <item>4</item>
        <item>0</item>
        <item>3</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="item_token_custom">Custom Token</string>
    <string name="item_token_custom_desc">You may use your own API token in case ours exceeds the daily limit.</string>
    <string name="dialog_token_custom_title">Enter your own API token</string>
    <string name="dialog_token_custom_secret">API Secret</string>
    <string name="dialog_token_custom_id">API ID</string>
    <string name="dialog_token_custom_how_to_get_it">How to get one?</string>
    <string name="item_enable_swipe_back">Enable swipe back gesture</string>
    <string name="category_notification">Notification</string>
    <string name="item_notification_interval">Notification interval</string>

    <string-array name="notification_interval">
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>1.5 hours</item>
        <item>3 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="notification_interval_item">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="item_notification_do_not_disturb">Do not disturb mode</string>
    <string name="item_notification_do_not_disturb_desc">Don\'t send notifications from 23:00 to 06:00.</string>
    <string name="item_disable_animation">Disable list animations</string>
    <string name="item_disable_animation_desc">Recommend old devices to disable it</string>
	<string name="item_navigation_tint">Navigation bar tint</string>
	<string name="item_navigation_tint_desc">Available only on Android 5.x or higher versions.</string>

    <string name="action_select_company">Shipment companies list</string>
    <string name="search_hint_company">Search 「Shipment companies」</string>
    <string name="action_phone">Phone</string>
    <string name="action_website">Open website</string>
    <string name="toast_phone_is_not_exist">Sorry, we haven\'t known the phone number of this company.</string>
	<string name="toast_mic_unsupported">Sorry, you haven't installed Mokee Voice Assist.</string>
    <string name="notification_delivered">" has been delivered."</string>
    <string name="notification_on_the_way">" is on the way."</string>
    <string name="notification_new_message">" has a new message."</string>
    <string name="action_settings">Settings</string>

</resources>
