<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

	<item android:id="@+id/action_select_company"
	      android:title="@string/action_select_company"
	      android:icon="@drawable/ic_local_shipping_white_24dp"
	      app:showAsAction="always"/>

	<item android:id="@+id/action_manual_refresh"
	      android:title="@string/action_manual_refresh"
	      app:showAsAction="never"/>

	<item android:id="@+id/action_add"
	      android:title="@string/action_add"
	      app:showAsAction="never"/>

	<item android:id="@+id/action_settings"
	      android:title="@string/title_settings"
	      app:showAsAction="never"/>

	<item android:id="@+id/action_donate"
	      android:title="@string/item_donate"
	      app:showAsAction="never"/>

</menu>