<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

	<item android:id="@+id/action_phone"
	      android:icon="@drawable/ic_local_phone_white_24dp"
	      android:title="@string/action_phone"
	      app:showAsAction="always"
	      android:visible="false"/>

	<item android:id="@+id/action_edit"
	      android:icon="@drawable/ic_mode_edit_white_24dp"
	      android:title="@string/action_edit"
	      app:showAsAction="ifRoom"/>

	<item android:id="@+id/action_copy"
	      android:title="@string/action_copy"
		  app:showAsAction="never"/>

	<item android:id="@+id/action_share"
	      android:title="@string/action_share"
	      app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
	      app:showAsAction="never"/>

</menu>